discussion/kv_engine/157427/157427_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45654: Move to pausable task

Change-Id: I35632ee6911c5d49c51fccecee1786cb40589b8f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-07-19 13:50:43.000000000
Message: 
Uploaded patch set 18.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-19 14:38:23.000000000
Message: 
Patch Set 18: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37830/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0064/0157]: duplicate items on disk.....\kv_engine\engines\ep\tests\ep_test_apis.cc:553 Test failed: `" (Expected `Success", got `Not found" - evict_key: expected SUCCESS when evicting key.)
(206 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37830/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10670/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    check();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:139:11: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    check();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:8: error: field has incomplete type "void" [clang-diagnostic-error]
  void check() const noexcept {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:13: error: expected ";" at end of declaration list [clang-diagnostic-error]
  void check() const noexcept {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:14: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
  void check() const noexcept {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:174:3: error: unknown type name "Storage" [clang-diagnostic-error]
  Storage storage_{};
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:15: error: variable has incomplete type "void" [clang-diagnostic-error]
  static void check() noexcept;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:20: error: expected ";" at end of declaration list [clang-diagnostic-error]
  static void check() noexcept;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:21: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
  static void check() noexcept;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:1756:51: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
      F14LinkCheck<getF14IntrinsicsMode()>::check();
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:1873:53: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
        F14LinkCheck<getF14IntrinsicsMode()>::check();
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10670/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11:
error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10670/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/283/ : FAILURE

Compile error at [2021-07-19T14:19:59.474Z] tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/283/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12769/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0064/0157]: duplicate items on disk...../kv_engine/engines/ep/tests/ep_test_apis.cc:553 Test failed: `" (Expected `Success", got `Not found" - evict_key: expected SUCCESS when evicting key.)
[2021-07-19T14:30:01.034Z] (638 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12769/ )

ThreadSanitizer issue: data race /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:180 in std::__uniq_ptr_impl<ExecutorPool, std::default_delete<ExecutorPool> >::reset(ExecutorPool*)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12254/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12254/ )

Test exceeded the timeout:
[2021-07-19T14:22:23.193Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12254/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12425/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12425/ )

Test exceeded the timeout:
[2021-07-19T14:26:37.048Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12425/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20323/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/257/ : FAILURE

Test exceeded the timeout:
[2021-07-19T13:58:42.974Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/257/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9327/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32268/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11340/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
